--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "3mmanuel",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "socket.io": "^2.0.3"
   }
 }
